--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@ CHANGELOG
 
 3.0.0 - 2020-07-08
 
-    **The elevator and stepper are compliant with STIX 2.1 CS01**
+    **The slider is compliant with STIX 2.1 CS01**
 
     **Python 2.7 and 3.4 are no longer supported**
 
